--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@testing-library/react": "^13.1.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/styled-components": "^5.1.25",
+    "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
